results/SVCOMP/specgen/log-multinewarray-2024_02_29_01_01_24.txt
class multinewarray {
    //@ ensures \result ==> some_a.length == 4;
    //@ ensures \result ==> some_a[0].length == 3;
    //@ ensures \result ==> some_a[0][0].length == 2;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) 
            for (int j = 0; j < y; ++j) 
                int_array[i][j] = i + j;

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:2: error: cannot find symbol
    //@ ensures \result ==> some_a.length == 4;
                            ^
  symbol:   variable some_a
  location: class multinewarray
/home/max/Documents/JMLGPT/tmp/multinewarray.java:3: error: cannot find symbol
    //@ ensures \result ==> some_a[0].length == 3;
                            ^
  symbol:   variable some_a
  location: class multinewarray
/home/max/Documents/JMLGPT/tmp/multinewarray.java:4: error: cannot find symbol
    //@ ensures \result ==> some_a[0][0].length == 2;
                            ^
  symbol:   variable some_a
  location: class multinewarray
3 errors

class multinewarray {
    //@ ensures \result ==> some_a.length == 4;
    //@ ensures \result ==> some_a[0].length == 3;
    //@ ensures \result ==> some_a[0][0].length == 2;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) 
            for (int j = 0; j < y; ++j) 
                int_array[i][j] = i + j;

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:2: error: cannot find symbol
    //@ ensures \result ==> some_a.length == 4;
                            ^
  symbol:   variable some_a
  location: class multinewarray
/home/max/Documents/JMLGPT/tmp/multinewarray.java:3: error: cannot find symbol
    //@ ensures \result ==> some_a[0].length == 3;
                            ^
  symbol:   variable some_a
  location: class multinewarray
/home/max/Documents/JMLGPT/tmp/multinewarray.java:4: error: cannot find symbol
    //@ ensures \result ==> some_a[0][0].length == 2;
                            ^
  symbol:   variable some_a
  location: class multinewarray
3 errors

class multinewarray {
    //@ ensures \result ==> 4 == 4;
    //@ ensures \result ==> 3 == 3;
    //@ ensures \result ==> 2 == 2;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) 
            for (int j = 0; j < y; ++j) 
                int_array[i][j] = i + j;

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:18: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i][j] = i + j;
                          ^
  Reason: Double rewriting of ident: i i_422_422___23 i_422_438___26
1 error

class multinewarray {
    //@ ensures \result ==> 4 == 4;
    //@ ensures \result ==> 3 == 3;
    //@ ensures \result ==> 2 == 2;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) {
            for (int j = 0; j < y; ++j) {
                int_array[i][j] = i + j;
            }
        }

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:18: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i][j] = i + j;
                          ^
  Reason: Double rewriting of ident: i i_422_422___23 i_422_438___26
1 error

class multinewarray {
    //@ ensures \result ==> 4 == 4;
    //@ ensures \result ==> 3 == 3;
    //@ ensures \result ==> 2 == 2;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) {
            for (int j = 0; j < y; ++j) {
                int_array[i][j] = i + j;
            }
        }

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:18: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i][j] = i + j;
                          ^
  Reason: Double rewriting of ident: i i_422_422___23 i_422_438___26
1 error

class multinewarray {
    //@ ensures \result ==> 4 == 4;
    //@ ensures \result ==> 3 == 3;
    //@ ensures \result ==> 2 == 2;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) {
            for (int j = 0; j < y; ++j) {
                int_array[i][j] = i + j;
            }
        }

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:18: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i][j] = i + j;
                          ^
  Reason: Double rewriting of ident: i i_422_422___23 i_422_438___26
1 error

class multinewarray {
    //@ ensures \result ==> true;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) {
            for (int j = 0; j < y; ++j) {
                int_array[i][j] = i + j;
            }
        }

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:16: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i][j] = i + j;
                          ^
  Reason: Double rewriting of ident: i i_348_348___23 i_348_364___26
1 error

class multinewarray {
    //@ ensures \result;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) {
            for (int j = 0; j < y; ++j) {
                int_array[i][j] = i + j;
            }
        }

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:16: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i][j] = i + j;
                          ^
  Reason: Double rewriting of ident: i i_339_339___23 i_339_355___26
1 error

class multinewarray {
    //@ ensures \result;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i = 0; i < x; ++i) {
            for (int j = 0; j < y; ++j) {
                int_array[i][j] = i + j;
            }
        }

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:16: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i][j] = i + j;
                          ^
  Reason: Double rewriting of ident: i i_339_339___23 i_339_355___26
1 error

class multinewarray {
    //@ ensures \result;
    public static boolean f() {
        int[][][] some_a = new int[4][3][2];

        assert some_a.length == 4;
        assert some_a[0].length == 3;
        assert some_a[0][0].length == 2;

        int x = 3;
        int y = 5;
        int[][] int_array = new int[x][y];

        for (int i_1 = 0; i_1 < x; ++i_1) {
            for (int j_1 = 0; j_1 < y; ++j_1) {
                int_array[i_1][j_1] = i_1 + j_1;
            }
        }

        return int_array[2][4] == 6;
    }
}
/home/max/Documents/JMLGPT/tmp/multinewarray.java:16: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                int_array[i_1][j_1] = i_1 + j_1;
                          ^
  Reason: Double rewriting of ident: i_1 i_1_339_339___23 i_1_339_359___26
1 error

